# Backend-Traveling-Practice

./: .gitignore  pyproject.toml
flasx/: database.py  main.py
flasx/core/: config.py  security.py
flasx/models/: models.py
flasx/routers/: auth_router.py  registration_router.py
flasx/schemas/: schemas.py
test/: conftest.py  test_register.py
